# q1compile

./: .gitignore  .gitmodules  CmakeLists.txt  LICENSE  README.md  brushes_a.txt  brushes_b.txt  configure.bat  ents_a.txt  lights_a.txt  lights_b.txt  q1compile_readme.txt
include/: imgui_markdown.h
src/: CMakeLists.txt  bsp.cpp  bsp.h  common.cpp  common.h  compile.cpp  compile.h  config.cpp  config.h  console.cpp  console.h  file_watcher.cpp  file_watcher.h  keybind.cpp  keybind.h  lmath.h  main.cpp  map_file.cpp  map_file.h  mutex_char_buffer.cpp  mutex_char_buffer.h  mutex_queue.h  path.cpp  path.h  q1compile.cpp  q1compile.h  q1compile_imgui_widgets.cpp  render.cpp  render.h  shell_command.cpp  shell_command.h  sub_process.cpp  sub_process.h  work_queue.cpp  work_queue.h
src/fonts/: droid_sans_mono.cpp  icofont.cpp  icofont.h
